--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -940,3 +940,8 @@ input#shout {
     margin-bottom:10px;
     overflow:hidden;
     }
+.settingrow {
+    margin-bottom:20px;
+    border-bottom: 1px solid #eee;
+    padding-bottom:20px;
+   } 
